# VerdictCouncil_Backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  Procfile.dev  README.md  TODOS.md  alembic.ini  docker-compose.infra.yml  langgraph.json  pyproject.toml  skills-lock.json
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  eval.yml  infra-bootstrap.yml  production-deploy.yml  promptfoo-redteam-ci.yml  promptfoo-tests-ci.yml  staging-deploy.yml
.linear-sdlc/scripts/: sync_state.json  sync_us040.py  sync_user_stories.py  update_doc_us040.py
.linear-sdlc/wiki/: .gitattributes  CLAUDE.md  index.md  log.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_case_description.py  0003_add_manual_decision_recommendation_type.py  0004_add_senior_judge_role.py  0004_case_fts_index.py  0005_add_failed_retryable_status.py  0005_add_phase2_workflow_models.py  0006_add_password_reset_tokens.py  0006_pipeline_checkpoints.py  0007_case_fts_index.py  0008_add_failed_retryable_status.py  0009_pipeline_checkpoints.py  0010_admin_persistence_and_judge_kb.py  0011_add_case_intake_metadata.py  0012_add_latest_run_id.py  0013_add_pipeline_jobs.py  0016_remove_verdict_machinery.py  0017_gate_model.py  0018_drop_clerk_senior_judge_roles.py  0019_add_domains_and_case_domain_fk.py  0020_re_add_senior_judge_role.py  0021_intake_draft_states_and_document_kind.py  0022_add_agent_aligned_document_kinds.py  0023_drop_solace_message_id.py  0024_pipeline_events_replay.py  0025_pipeline_jobs_traceparent.py  0026_audit_schema_upgrade.py  0027_add_document_parsed_text.py
configs/: shared_config.yaml
configs/agents/: argument-construction.yaml  case-processing.yaml  complexity-routing.yaml  deliberation.yaml  evidence-analysis.yaml  fact-reconstruction.yaml  governance-verdict.yaml  hearing-analysis.yaml  hearing-governance.yaml  legal-knowledge.yaml  pipeline-orchestrator.yaml  witness-analysis.yaml
configs/gateway/: web-gateway.yaml
configs/services/: layer2-aggregator.yaml  whatif-controller.yaml
diagrams/: README.md  verdictcouncil_use_case.mmd  verdictcouncil_use_case.puml
docker/postgres-init/: 01_create_adk_db.sql
docs/: architecture_draft.md  openai-api-audit.md  openapi.json  openapi.md  setup-2026-04-25.md  sse-schema.json  verdictcouncil_architecture.md
docs/architecture/: 01-user-stories.md  02-system-architecture.md  03-agent-configurations.md  04-tech-stack.md  05-diagrams.md  06-cicd-pipeline.md  07-contestable-judgment-mode.md  08-infrastructure-setup.md  09-local-development.md  10-explainable-responsible-ai.md  11-ai-security-risk-register.md  12-testing-summary.md  README.md  appendices.md
docs/operations/: solace-ha-runbook.md  sprint4-a3-13-manual-smoke.md  sprint4-manual-ops.md  uat-runbook.md
docs/runbooks/: postgressaver-cutover.md
docs/security/: llm-guard-spike.md  rag-corpus-sanitization.md
k8s/: README.md
k8s/base/: cronjob-stuck-case-watchdog.yaml  deployment-api-service.yaml  deployment-argument-construction.yaml  deployment-arq-worker.yaml  deployment-case-processing.yaml  deployment-complexity-routing.yaml  deployment-deliberation.yaml  deployment-evidence-analysis.yaml  deployment-fact-reconstruction.yaml  deployment-governance-verdict.yaml  deployment-layer2-aggregator.yaml  deployment-legal-knowledge.yaml  deployment-web-gateway.yaml  deployment-witness-analysis.yaml  hpa-web-gateway.yaml  ingress.yaml  job-alembic-migrate.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service-api-service.yaml  service-solace.yaml  service-web-gateway.yaml  solace-bootstrap-job.yaml  solace-ha.values.yaml  solace-ha.yaml  solace-statefulset.yaml
k8s/monitoring/: README.md  servicemonitor-api.yaml  values.yaml
promptfoo-tests/: PROMPTFOO_INSTRUCTIONS.md  audit.yaml  baseline.json  intake.yaml  package.json  redteam.yaml  research-evidence.yaml  research-facts.yaml  research-law.yaml  research-witnesses.yaml  synthesis.yaml
promptfoo-tests/fixtures/: intake_traffic1.json  research_traffic1.json  synthesis_traffic1.json
promptfoo-tests/prompt_builders/: _lib.js  audit.js  intake-redteam.js  intake.js  research-evidence.js  research-facts.js  research-law.js  research-witnesses.js  synthesis.js
promptfoo-tests/test_loaders/: _lib.js  audit.js  intake.js  research-evidence.js  research-facts.js  research-law.js  research-witnesses.js  synthesis.js
prompts/: audit.md  intake.md  research-evidence.md  research-facts.md  research-law.md  research-witnesses.md  synthesis.md
scripts/: capture_sse_goldens.py  check_casestate_serialization.py  check_sse_schema.py  demo_rag.py  export_openapi.py  export_sse_schema.py  fix_demo_data.py  fix_missing_columns.py  init_adk_db.py  migrate_in_flight_cases.py  migrate_prompts_to_langsmith.py  prefetch_sanitizer_model.py  provision_domain_stores.py  pull_prompts_from_langsmith.py  reset_db.py  reset_passwords.py  seed_data.py  seed_users.py  smoke_frontend_contract.py  solace-bootstrap.sh
specs/: cross-repo-gap-2026-04.md  user-stories-sync.md
src/api/: app.py  deps.py  trace_propagation.py
src/config/: model_prices.yaml
src/db/: persist_case_results.py  pipeline_state.py
src/models/: __init__.py  admin_event.py  audit.py  base.py  calibration.py  case.py  domain.py  judge_correction.py  pipeline_checkpoint.py  pipeline_event.py  pipeline_job.py  suppressed_citation.py  system_config.py  user.py  what_if.py
src/pipeline/: _a2a_client.py  _solace_a2a_client.py  agent_schemas.py  guardrails.py  hooks.py  manifest.py  mesh_runner.py  mesh_runner_factory.py  observability.py  runner.py  sam_status_translator.py
src/services/: case_report_data.py  database.py  document_parse.py  hearing_pack.py  intake_events.py  intake_extraction.py  knowledge_base.py  knowledge_base_store.py  mailer.py  pdf_export.py  pipeline_events.py  stuck_case_watchdog.py
src/shared/: audit.py  case_state.py  confidence.py  (+7 more)
tasks/: lessons.md  plan.md  ticket-2026-04-27-sse-session-leak-and-polling-dedupe.md  todo.md
tests/: conftest.py
(+325 files in other folders)
